@@ -1,3 +1,8 @@
+2012-06-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/player/world_model.cpp:
+	- WorldModel::prevOffsideLineX()を追加
+
 2012-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/action/neck_scan_players.cpp:
